fix select2 bugs
- BUG: A text overflow in the div.set-selector's child span causes the
       span to stretch the parent fieldset.
+ FIX: Set .set-selector's width to a fixed value.

- BUG: span.select2-chosen does not render an ellipsis when text
       overflows.
+ FIX: Negate the `.poke-info span` selector for .select2-chosen and do
       not override .select2-chosen's width property.

--- a/ap_calc.css
+++ b/ap_calc.css
@@ -150,7 +150,7 @@ th {
     display: inline-block;
     width: 6em;
 }
-.poke-info input:not([type]), .poke-info input[type="text"], .poke-info span {
+.poke-info input:not([type]), .poke-info input[type="text"], .poke-info span :not(.select2-chosen) {
     display: inline-block;
     width: 2.5em;
 }
@@ -162,7 +162,7 @@ th {
     margin: 1em 0;
 }
 .set-selector {
-    width: 100%;
+    width: 28em;
 }
 .info-selectors select {
     width: 8em;
@@ -199,9 +199,6 @@ select.toxic-counter {
 }
 
 /* select2 overrides */
-.select2-container .select2-choice > .select2-chosen {
-    width: 100%;
-}
 .small-select.select2-container .select2-choice {
     font-size: 0.9em;
     height: 18px;
